--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="projects">
-  {% for project in site.documents %}
+  {% for project in site.categories.project %}
     <article class="projects">
 
       <div><h1 style="line-height:0px;><a href="{{ site.baseurl }}{{ project.url }}">{{ project.title }}</a></h1>
