--- a/tagbrowser.html
+++ b/tagbrowser.html
@@ -7,7 +7,7 @@ title: Tags
 {% for tag in site.tags %}
   {% assign t = tag | first %}
   {% assign posts = tag | last %}
-  <li>{{t | replace:" ","-" }} has {{ posts | size }} posts</li>
+  <li>{{t | upcase | replace:" ","-" }} has {{ posts | size }} posts</li>
 {% endfor %}
 </ul>
 
@@ -15,7 +15,7 @@ title: Tags
   {% assign t = tag | first %}
   {% assign posts = tag | last %}
 
-{t}
+{{t | upcase}}
 <ul>
 {% for post in posts %}
   {% if post.tags contains t %}
