--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@ published: true
       </div>
 		<a href="{{ site.baseurl }}{{ project.url }}" class="read-more">Read More</a>
 	</article>
-	<hr>  
+	<hr style="background-color: #eeeeee;">  
   {% endfor %}
 
 </div>
