--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@ published: true
 			<h1 style="line-height:0; margin-top:30px; margin-bottom:15px;">
 				<a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}
       	
-					<h4>{{ post.subtitle }}</h4>
+					<!––<h4>{{ post.subtitle }}</h4>-->
 				</a>
 			</h1>
 		</div>
